---
title: Arquitectura Hexagonal - DeudaExamen (v3.46.0)
---

classDiagram
    direction TB

    namespace domain {
        class DeudaExamen {
            +Boolean autorizadoRendir
            +Boolean matriculaPagada
            +Integer cuotasAdeudadas
            +BigDecimal importeAdeudado
            +Boolean habilitadoTesoreria
        }

        class GetDeudaExamenUseCase {
            << interface >>
            +getDeudaExamenByFacultadAndPersona(Integer, BigDecimal, Integer, OffsetDateTime) DeudaExamen
        }
    }

    namespace application {
        class GetDeudaExamenUseCaseImpl {
            -ChequeraSerieService chequeraSerieService
            -SetupService setupService
            -ChequeraCuotaService chequeraCuotaService
            -LectivoService lectivoService
            -TesoreriaEstadoFacultadService tesoreriaEstadoFacultadService
            +getDeudaExamenByFacultadAndPersona(Integer, BigDecimal, Integer, OffsetDateTime) DeudaExamen
        }
    }

    namespace extern {
        class TesoreriaEstadoFacultadService {
            +findByUnique(Integer, BigDecimal, Integer) TesoreriaEstadoFacultad
        }
    }

    namespace infrastructure_web {
        class PersonaController {
            -PersonaService personaService
            -PersonaDtoMapper dtoMapper
            +getDeudaExamenByFacultadAndPersona(Integer, BigDecimal, Integer, OffsetDateTime) ResponseEntity~DeudaExamenResponse~
        }

        class DeudaExamenResponse {
            +Boolean autorizadoRendir
            +Boolean matriculaPagada
            +Integer cuotasAdeudadas
            +BigDecimal importeAdeudado
            +Boolean habilitadoTesoreria
        }

        class PersonaDtoMapper {
            +toDeudaExamenResponse(DeudaExamen) DeudaExamenResponse
        }
    }

    GetDeudaExamenUseCaseImpl ..|> GetDeudaExamenUseCase : implements
    GetDeudaExamenUseCaseImpl --> TesoreriaEstadoFacultadService : uses

    PersonaController --> PersonaDtoMapper : uses
    PersonaDtoMapper --> DeudaExamen : maps
    PersonaDtoMapper --> DeudaExamenResponse : maps
